fix(cockpit/breadcrumbs): adjust breadcrumb spacing
Related to CAM-913

--- a/webapps/cockpit/cockpit-webapp/src/main/webapp/assets/css/cockpit/app.css
+++ b/webapps/cockpit/cockpit-webapp/src/main/webapp/assets/css/cockpit/app.css
@@ -261,7 +261,6 @@ textarea.in-place-edit {
 
 .breadcrumb {
   margin: 0 0 20px;
-  list-style: none;
   background-color: inherit;
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
